--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,15 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   intl: ^0.17.0
+  flutter_swipe_action_cell: ^2.0.0
+  flutter_slidable: ^0.6.0
   shared_preferences: ^2.0.12
+  url_launcher: ^6.0.3
+  mockito: ^5.1.1
   flutter:
     sdk: flutter
+
+
 
 
 
